# bedrock-agents-demo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml  stream_cf_logs.sh
bedrock_agents/: bedrock_agents_stack.py  bedrock_app_stack.py  bedrock_data_stack.py
bedrock_agents/constructs/: bedrock_agent.py  bedrock_pinecone_knowledgebase.py  pinecone_index.py
bedrock_agents/functions/: pinecone_index.py  web_search.py
bedrock_agents/ui/: gradio_app.py  streamlit_app.py
cdk/: models.py
cdk/constructs/: bedrock_agent.py  bedrock_guardrail.py  bedrock_pinecone_knowledgebase.py  pinecone_index.py
cdk/functions/: bedrock_agent_code.py  pinecone_index.py  web_search.py
cdk/stacks/: bedrock_agents_stack.py  bedrock_app_stack.py  bedrock_data_stack.py  helpers.py
docs/: .$architecture.drawio.bkp  architecture.drawio
gradio_app/: app.py  cw_metrics.py  fixes.py  helpers.py  kb.py  middleware.py  models.py  oauth_okta.py
notebooks/: boto_testing.ipynb  metrics_testing.ipynb  pc-testing.ipynb
tests/unit/: mock_data.py  test_bedrock_agents_stack.py
tests/unit/functions/: test_web_search.py
tests/unit/models/: test_bedrock_lambda_types.py
tests/unit/stacks/: test_bedrock_agents_stack.py
