[tool.poetry]
name = "bedrock-agents"
version = "0.1.0"
description = ""
authors = ["Brian Peterson <brian.peterson@cloudshift.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aws-lambda-powertools = "^2.40.1"
pydantic = "^2.8.2"
requests = "^2.32.3"
gradio = "^4.41.0"
pandas = "^2.2.2"
plotly = "^5.23.0"
authlib = "^1.3.1"
itsdangerous = "^2.2.0"
pinecone-client = "^4.1.2"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.141"
constructs = ">=10.0.0,<11.0.0"
aws-cdk-lib = "2.148.0"
jupyter = "^1.0.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
autoflake = "^2.3.1"
flake8 = "^7.1.0"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
